# framework.uifw.e17

./: COPYING.Flora  Makefile.am  configure.ac  e17-data.manifest  e17.efl  e17.manifest  e17.rule  readme.slp2
config/: Makefile.am
config/illume/: e.src
config/samsung/: e.src
data/other/: enlightenment_remote
data/themes/: Makefile.am  samsung.edc
data/tools/: enlightenment_remote
debian/: SVN_REV  changelog  control  e17-data.install  e17.install  e17.postinst  e17.prerm  rules
mobile/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.cache  config.cache-env  config.h  config.h.in  config.status  configure  configure.ac  e17.manifest  e17.rule  enlightenment.pc  enlightenment.spec  libtool
mobile/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
mobile/config/: Makefile  Makefile.in  profile.cfg
mobile/config/samsung/: Makefile  Makefile.am  Makefile.in  e.cfg
mobile/data/: Makefile  Makefile.in
mobile/doc/: Doxyfile  Makefile  Makefile.in  e.dox
mobile/po/: ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  et.po  fi.po  fo.po  fr.po  fr_CH.po  he.po  hr.po  hu.po  (+21 more)
packaging/: e17.changes  e17.service  e17.service.wearable  e17.spec  e17_early.service
po/: POTFILES.in  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  et.po  fi.po  fo.po  fr.po  fr_CH.po  he.po  hr.po  hu.po  it.po  ja.po  km.po  ko.po  ku.po  lt.po  ms.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
wearable/: Makefile.am  configure.ac  e17.manifest  e17.rule
(+233 files in other folders)
